--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
   <body>
     <div id="title"></div>
     <canvas id="bg"></canvas>
-    <script type="module" src="/src/main.js"></script>
+<script type="module" src="/Portfolio/src/main.js"></script>
   </body>
 </html>
